# sbom-test-project

./: README.md  amazon_inspector_sbom.py  github_sbom.py  nodestream.yaml  pyproject.toml  sbom.py  sbom_writer.py
data/CDX/: arn_aws_lambda_us-west-2_852474358610_function_AirRoutesLambdaFunction_$LATEST_CYCLONEDX_1_4.json  arn_aws_lambda_us-west-2_852474358610_function_P8Test03LambdaFunction_$LATEST_CYCLONEDX_1_4.json  arn_aws_lambda_us-west-2_852474358610_function_vpcflowlog_$LATEST_CYCLONEDX_1_4.json  i-0dfd4132c0dd31532_CYCLONEDX_1_4.json
data/SPDX/: javax.annotation_javaee_83417807ad402ee1022c0307208d4510c80c68b6.json  tinkerpop3_tinkerpop_ea4bc778e15b62aca7c2c16218b45110d17db63d.json
pipelines/: sbom.yaml
sbom-project/: argument_resolvers.py
sbom_writer/: __init__.py  cyclonedx_writer.py  sbom_writer.py  spdx_writer.py
tests/: test_sbom.py
